platform/monitoring/prometheus-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
  - name: main-gateway
    namespace: nginx-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /prometheus
    backendRefs:
    - name: kps-kube-prometheus-stack-prometheus
      namespace: monitoring
      port: 9090
  - matches:
    - path:
        type: PathPrefix
        value: /alertmanager
    backendRefs:
    - name: kps-kube-prometheus-stack-alertmanager
      namespace: monitoring
      port: 9093
